Improved Git branch + revision determination

--- a/cmake/Templates/cdash/Init.cmake.in
+++ b/cmake/Templates/cdash/Init.cmake.in
@@ -16,6 +16,7 @@ set(CTEST_COMPILER          "@CMAKE_CXX_COMPILER_ID@")
 set(CTEST_COMPILER_VERSION  "@CMAKE_CXX_COMPILER_VERSION@")
 set(CTEST_DASHBOARD_ROOT    "@CMAKE_DASHBOARD_ROOT@")
 set(CTEST_BRANCH            "@CMAKE_SOURCE_BRANCH@")
+set(CTEST_REVISION          "@CMAKE_SOURCE_REVISION@")
 set(CTEST_LOCAL_DIRECTORY   "@CMAKE_LOCAL_DIRECTORY@")
 set(CTEST_GENERATOR         "@CMAKE_GENERATOR@")
 set(MPI_FOUND               "@MPI_FOUND@")
@@ -116,7 +117,7 @@ if(NOT "${CTEST_LOCAL_DIRECTORY}" STREQUAL "")
 else(NOT "${CTEST_LOCAL_DIRECTORY}" STREQUAL "")
     set(CTEST_CHECKOUT_COMMAND      "${CTEST_GIT_COMMAND} clone -b ${CTEST_BRANCH} --recurse-submodules https://github.com/jrmadsen/@PROJECT_NAME@ ${CTEST_SOURCE_DIRECTORY}")
 endif(NOT "${CTEST_LOCAL_DIRECTORY}" STREQUAL "")
-set(CTEST_UPDATE_COMMAND        "${CTEST_GIT_COMMAND} pull")
+set(CTEST_UPDATE_COMMAND        "${CTEST_GIT_COMMAND} checkout -qf ${CTEST_REVISION}")
 set(CTEST_CONFIGURATION_TYPE    "@CMAKE_BUILD_TYPE@")
 set(CTEST_CONFIGURE_COMMAND     "${CTEST_CMAKE_COMMAND} ${CTEST_CONFIG_OPTIONS} -DBUILD_TESTING=ON -DDASHBOARD_MODE=ON -DCMAKE_INSTALL_PREFIX=${CTEST_INSTALL_DIRECTORY} -Wno-dev ${CTEST_SOURCE_DIRECTORY} -G ${CTEST_CMAKE_GENERATOR}")
 if(WIN32)
