--- a/.travis.yml
+++ b/.travis.yml
@@ -507,7 +507,7 @@ install:
     - cmake -DCMAKE_INSTALL_PREFIX=${INSTALL_DIR} -DUSE_MPI=ON
         -DCMAKE_BUILD_TYPE=Release -DPYTHON_EXECUTABLE=$(which python)
         -DCMAKE_C_COMPILER=${CC} -DCMAKE_CXX_COMPILER=${CXX}
-        -DBUILD_TESTING=ON -DCTEST_SITE=travis -DCTEST_MODEL=Continous
+        -DBUILD_TESTING=ON -DCTEST_SITE=travis -DCTEST_MODEL=Continuous
         -DCTEST_LOCAL_CHECKOUT=ON -DSHARED_PYTHON_LINKING=${SHARED_LINK}
         ${PWD}/..
     - grep '^[A-Za-z]' CMakeCache.txt | grep -vi advanced
