--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -48,7 +48,7 @@ install:
       if ($env:PLATFORM -eq "x64") { $env:PYTHON = "$env:PYTHON-x64" }
       $env:PATH = "C:\Python$env:PYTHON\;C:\Python$env:PYTHON\Scripts\;$env:PATH"
       pip install --disable-pip-version-check --user --upgrade pip wheel
-      $env:PYTHON_EXE = "C:\Python$env:PYTHON\python
+      $env:PYTHON_EXE = "C:\Python$env:PYTHON\python"
     } elseif ($env:CONDA) {
       if ($env:CONDA -eq "27") { $env:CONDA = "" }
       if ($env:PLATFORM -eq "x64") { $env:CONDA = "$env:CONDA-x64" }
@@ -57,7 +57,7 @@ install:
       conda update -y -q -n base conda
       conda install -y -q pip
       python -m pip install -U pip
-      $env:PYTHON_EXE = "C:\Miniconda$env:CONDA\python
+      $env:PYTHON_EXE = "C:\Miniconda$env:CONDA\python"
     }
     pip install -U setuptools disttools
     pip install -U matplotlib numpy pillow
