Plotting + Windows DLL import/export
- Improved the plotting cmd line interface and installation
- Add possible support for Windows shared libraries
- C++ tests now do more outputting

--- a/cmake/Templates/Doxyfile.in
+++ b/cmake/Templates/Doxyfile.in
@@ -27,7 +27,7 @@ JAVADOC_AUTOBRIEF      = NO
 QT_AUTOBRIEF           = NO
 MULTILINE_CPP_IS_BRIEF = YES
 INHERIT_DOCS           = YES
-SEPARATE_MEMBER_PAGES  = YES
+SEPARATE_MEMBER_PAGES  = NO
 TAB_SIZE               = 4
 ALIASES                =
 TCL_SUBST              =
