--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -48,7 +48,6 @@ install:
       if ($env:PLATFORM -eq "x64") { $env:PYTHON = "$env:PYTHON-x64" }
       $env:PATH = "C:\Python$env:PYTHON\;C:\Python$env:PYTHON\Scripts\;$env:PATH"
       pip install --disable-pip-version-check --user --upgrade pip wheel
-      $env:PYTHON_EXE = "C:\Python$env:PYTHON\python"
     } elseif ($env:CONDA) {
       if ($env:CONDA -eq "27") { $env:CONDA = "" }
       if ($env:PLATFORM -eq "x64") { $env:CONDA = "$env:CONDA-x64" }
@@ -57,7 +56,6 @@ install:
       conda update -y -q -n base conda
       conda install -y -q pip
       python -m pip install -U pip
-      $env:PYTHON_EXE = "C:\Miniconda$env:CONDA\python"
     }
     pip install -U setuptools disttools
     pip install -U matplotlib numpy pillow
@@ -65,14 +63,12 @@ install:
 build_script:
 - mkdir build-timemory
 - cd build-timemory
-- cmake -DCMAKE_SUPPRESS_REGENERATION=1
-    -DSHARED_PYTHON_LINKING=OFF -DUSE_MPI=OFF -DPYTHON_EXECUTABLE="%PYTHON_EXE%"
-    -DBUILD_TESTING=ON -DCTEST_LOCAL_CHECKOUT=OFF -DCTEST_SITE=AppVeyor
-    -DCTEST_MODEL=Continuous .. -G "%CMAKE_GENERATOR%" -A "%CMAKE_ARCH%"
-#- set MSBuildLogger="C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
-#- cmake --build . --config %CONFIG% --target ALL_BUILD -- /m /v:m /logger:%MSBuildLogger%
-#- cmake --build . --config %CONFIG% --target INSTALL -- /m /v:m /logger:%MSBuildLogger%
-- ctest --config %CONFIG% -S cdash/Stages.cmake -DSTAGES="Build;Test" -DTRIGGER=Test -V --output-on-failure
+- cmake -DUSE_MPI=OFF -DBUILD_TESTING=ON -DCTEST_LOCAL_CHECKOUT=OFF
+    -DCTEST_SITE=AppVeyor -DCTEST_MODEL=Continuous .. -G "%CMAKE_GENERATOR%" -A "%CMAKE_ARCH%"
+- set MSBuildLogger="C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
+- cmake --build . --config "%CONFIG%" --target ZERO_CHECK -- /m /v:m /logger:%MSBuildLogger%
+- ctest --build . --config "%CONFIG%" -S cdash/Test.cmake -V --output-on-failure
+- cmake --build . --config "%CONFIG%" --target INSTALL -- /m /v:m /logger:%MSBuildLogger%
 - cd ..
 - pip install .
 - cd ..
