--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -63,8 +63,10 @@ install:
 build_script:
 - mkdir build-timemory
 - cd build-timemory
-- cmake -DUSE_MPI=OFF -DBUILD_TESTING=ON -DCTEST_LOCAL_CHECKOUT=OFF -DPYTHON_SHARED_LINKING=ON
-    -DCTEST_SITE=AppVeyor -DCTEST_MODEL=Continuous .. -G "%CMAKE_GENERATOR%" -A "%CMAKE_ARCH%"
+- cmake -DUSE_MPI=OFF -DBUILD_TESTING=ON 
+    -DCTEST_LOCAL_CHECKOUT=OFF -DSHARED_PYTHON_LINKING=ON
+    -DBUILD_EXAMPLES=ON -DCTEST_SITE=AppVeyor -DCTEST_MODEL=Continuous 
+    .. -G "%CMAKE_GENERATOR%" -A "%CMAKE_ARCH%"
 - set MSBuildLogger="C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 - cmake --build . --config "%CONFIG%" --target ZERO_CHECK -- /m /v:m /logger:%MSBuildLogger%
 - ctest --build . --config "%CONFIG%" -S cdash/Test.cmake -V --output-on-failure
@@ -73,4 +75,3 @@ build_script:
 - pip install .
 - cd ..
 - python -c "import timemory ; timemory.tests.run()"
-
