--- a/cmake/Templates/cdash/Init.cmake.in
+++ b/cmake/Templates/cdash/Init.cmake.in
@@ -99,32 +99,38 @@ endif("${NPROCS}" GREATER 16)
 
 # ---------------------------------------------------------------------------- #
 
-set(CTEST_BUILD_NAME            "[${CTEST_BRANCH}][${OS_NAME} ${HW_NAME}][${CTEST_COMPILER} ${CTEST_COMPILER_VERSION}][@CMAKE_BUILD_TYPE@][Python @PYBIND11_PYTHON_VERSION@][C++@CMAKE_CXX_STANDARD@]")
+set(CTEST_BUILD_NAME "[${CTEST_BRANCH}][${OS_NAME} ${HW_NAME}][${CTEST_COMPILER} ${CTEST_COMPILER_VERSION}][@CMAKE_BUILD_TYPE@][Python @PYBIND11_PYTHON_VERSION@][C++@CMAKE_CXX_STANDARD@]")
+
 if(MPI_FOUND)
     set(CTEST_BUILD_NAME "${CTEST_BUILD_NAME}[MPI]")
 endif(MPI_FOUND)
+
 set(CTEST_SOURCE_DIRECTORY      "${CTEST_DASHBOARD_ROOT}/source-@PROJECT_NAME@")
 set(CTEST_BINARY_DIRECTORY      "${CTEST_DASHBOARD_ROOT}/build-@PROJECT_NAME@")
 set(CTEST_INSTALL_DIRECTORY     "${CTEST_DASHBOARD_ROOT}/install-@PROJECT_NAME@")
 set(OPTION_BUILD                "-j${NPROCS}")
-
 set(CTEST_COMPILER_IS_GNU       "@CMAKE_CXX_COMPILER_IS_GNU@")
 set(CTEST_COMPILER_IS_CLANG     "@CMAKE_CXX_COMPILER_IS_CLANG@")
 set(CTEST_COMPILER_IS_INTEL     "@CMAKE_CXX_COMPILER_IS_INTEL@")
 
 if(NOT "${CTEST_LOCAL_DIRECTORY}" STREQUAL "")
-    set(CTEST_CHECKOUT_COMMAND      "rsync -ruv --exclude ${CTEST_LOCAL_DIRECTORY}/build-@PROJECT_NAME@ --exclude build-@PROJECT_NAME@ --exclude build-timemory --exclude ${CTEST_LOCAL_DIRECTORY}/build-timemory ${CTEST_LOCAL_DIRECTORY}/ ${CTEST_SOURCE_DIRECTORY}")
+    set(CTEST_CHECKOUT_COMMAND
+        "rsync -ruv --exclude ${CTEST_LOCAL_DIRECTORY}/build-@PROJECT_NAME@ --exclude build-@PROJECT_NAME@ --exclude build-timemory --exclude ${CTEST_LOCAL_DIRECTORY}/build-timemory ${CTEST_LOCAL_DIRECTORY}/ ${CTEST_SOURCE_DIRECTORY}")
 else(NOT "${CTEST_LOCAL_DIRECTORY}" STREQUAL "")
-    set(CTEST_CHECKOUT_COMMAND      "${CTEST_GIT_COMMAND} clone -b ${CTEST_BRANCH} --recurse-submodules https://github.com/jrmadsen/@PROJECT_NAME@ ${CTEST_SOURCE_DIRECTORY}")
+    set(CTEST_CHECKOUT_COMMAND
+        "${CTEST_GIT_COMMAND} clone -b ${CTEST_BRANCH} --recurse-submodules https://github.com/jrmadsen/@PROJECT_NAME@ ${CTEST_SOURCE_DIRECTORY}")
 endif(NOT "${CTEST_LOCAL_DIRECTORY}" STREQUAL "")
+
 set(CTEST_UPDATE_COMMAND        "${CTEST_GIT_COMMAND} checkout -qf ${CTEST_REVISION}")
 set(CTEST_CONFIGURATION_TYPE    "@CMAKE_BUILD_TYPE@")
 set(CTEST_CONFIGURE_COMMAND     "${CTEST_CMAKE_COMMAND} ${CTEST_CONFIG_OPTIONS} -DBUILD_TESTING=ON -DDASHBOARD_MODE=ON -DCMAKE_INSTALL_PREFIX=${CTEST_INSTALL_DIRECTORY} -Wno-dev ${CTEST_SOURCE_DIRECTORY} -G ${CTEST_CMAKE_GENERATOR}")
+
 if(WIN32)
     set(CTEST_BUILD_COMMAND     "${CTEST_CMAKE_COMMAND} --build ${CTEST_BINARY_DIRECTORY} --config @CMAKE_BUILD_TYPE@ --target INSTALL")
 else(WIN32)
     set(CTEST_BUILD_COMMAND     "${CTEST_MAKE_COMMAND} install ${OPTION_BUILD}")
 endif(WIN32)
+
 if(CTEST_COMPILER_IS_GNU)
     set(CTEST_COVERAGE_COMMAND ${CTEST_GNU_COV_COMMAND})
 elseif(CTEST_COMPILER_IS_CLANG)
@@ -134,12 +140,12 @@ set(CTEST_MEMORYCHECK_COMMAND "${CTEST_VALGRIND_COMMAND}")
 set(CTEST_MEMORYCHECK_COMMAND_OPTIONS "--leak-check=full --show-reachable=no --show-possibly-lost=yes")
 #  --main-stacksize=104857600 --valgrind-stacksize=10485760
 
-
 if(NOT DEFINED TRIGGER)
     set(TRIGGER "Any" CACHE STRING "Delay submit until TRIGGER == '(Any|Build|Test|Coverage|MemCheck)'")
 endif(NOT DEFINED TRIGGER)
 
 message(STATUS "CDash submit trigger (TRIGGER) : [\"${TRIGGER}\"]")
+
 
 # ---------------------------------------------------------------------------- #
 # -- Clean/Reset
@@ -151,6 +157,7 @@ macro(CLEAN_DIRECTORIES)
         COMMAND ${CTEST_CMAKE_COMMAND} -E remove_directory ${CTEST_INSTALL_DIRECTORY}
         WORKING_DIRECTORY ${CTEST_DASHBOARD_ROOT})
 endmacro(CLEAN_DIRECTORIES)
+
 
 # ---------------------------------------------------------------------------- #
 # -- Settings
