--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -37,33 +37,56 @@ matrix:
 
 install:
 - ps: |
-    if ($env:PLATFORM -eq "x64") { $env:CMAKE_ARCH = "x64" }
+    # CMake architecture
+    if ($env:PLATFORM -eq "x64") {
+      $env:CMAKE_ARCH = "x64"
+    }
+
+    # CMake generator
     if ($env:APPVEYOR_JOB_NAME -like "*Visual Studio 2017*") {
       $env:CMAKE_GENERATOR = "Visual Studio 15 2017"
       $env:CXXFLAGS = "-permissive-"
     } else {
       $env:CMAKE_GENERATOR = "Visual Studio 14 2015"
     }
+
+    # Python environment
     if ($env:PYTHON) {
-      if ($env:PLATFORM -eq "x64") { $env:PYTHON = "$env:PYTHON-x64" }
-      $env:PATH = "C:\Python$env:PYTHON\;C:\Python$env:PYTHON\Scripts\;$env:PATH"
+      if ($env:PLATFORM -eq "x64") {
+        $env:PYTHON = "$env:PYTHON$env:PYTHON-x64"
+        $env:PATH = "C:\Python$env:PYTHON-x64\;C:\Python$env:PYTHON-x64\Scripts\;$env:PATH"
+        $env:CMAKE_PREFIX_PATH = "C:\Python$env:PYTHON-x64\;C:\Python$env:PYTHON-x64\Scripts"
+        $env:PYTHON_EXE = "C:\Python$env:PYTHON-x64\python.exe"
+      } else {
+        $env:PATH = "C:\Python$env:PYTHON\;C:\Python$env:PYTHON\Scripts\;$env:PATH"
+        $env:CMAKE_PREFIX_PATH = "C:\Python$env:PYTHON\;C:\Python$env:PYTHON\Scripts"
+        $env:PYTHON_EXE = "C:\Python$env:PYTHON\python.exe"
+      }
       pip install --disable-pip-version-check --user --upgrade pip wheel
     } elseif ($env:CONDA) {
-      if ($env:CONDA -eq "27") { $env:CONDA = "" }
-      if ($env:PLATFORM -eq "x64") { $env:CONDA = "$env:CONDA-x64" }
-      $env:PATH = "C:\Miniconda$env:CONDA\;C:\Miniconda$env:CONDA\Scripts\;$env:PATH"
-      $env:PYTHONHOME = "C:\Miniconda$env:CONDA"
+      if ($env:PLATFORM -eq "x64") {
+        $env:PATH = "C:\Miniconda$env:CONDA-x64\;C:\Miniconda$env:CONDA-x64\Scripts\;$env:PATH"
+        $env:CMAKE_PREFIX_PATH = "C:\Miniconda$env:CONDA-x64\;C:\Miniconda$env:CONDA-x64\Scripts"
+        $env:PYTHONHOME = "C:\Miniconda$env:CONDA-x64"
+        $env:PYTHON_EXE = "C:\Miniconda$env:CONDA-x64\python.exe"
+      } else {
+        $env:PATH = "C:\Miniconda$env:CONDA-x64\;C:\Miniconda$env:CONDA-x64\Scripts\;$env:PATH"
+        $env:CMAKE_PREFIX_PATH = "C:\Miniconda$env:CONDA\;C:\Miniconda$env:CONDA\Scripts"
+        $env:PYTHONHOME = "C:\Miniconda$env:CONDA"
+        $env:PYTHON_EXE = "C:\Miniconda$env:CONDA\python.exe"
+      }
       conda update -y -q -n base conda
       conda install -y -q pip
       python -m pip install -U pip
     }
+    # pip installation
     pip install -U setuptools disttools
     pip install -U matplotlib numpy pillow
 
 build_script:
 - mkdir build-timemory
 - cd build-timemory
-- cmake -DUSE_MPI=OFF -DBUILD_TESTING=ON 
+- cmake -DUSE_MPI=OFF -DBUILD_TESTING=ON -DPYTHON_EXECUTABLE="%PYTHON_EXE%"
     -DCTEST_LOCAL_CHECKOUT=OFF -DSHARED_PYTHON_LINKING=ON
     -DBUILD_EXAMPLES=ON -DCTEST_SITE=AppVeyor -DCTEST_MODEL=Continuous 
     .. -G "%CMAKE_GENERATOR%" -A "%CMAKE_ARCH%"
