--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -87,7 +87,8 @@ build_script:
 - mkdir build-timemory
 - cd build-timemory
 - cmake -DUSE_MPI=OFF -DBUILD_TESTING=ON -DPYTHON_EXECUTABLE="%PYTHON_EXE%"
-    -DCTEST_LOCAL_CHECKOUT=OFF -DSHARED_PYTHON_LINKING=ON
+    -DCTEST_LOCAL_CHECKOUT=ON -DSHARED_PYTHON_LINKING=ON
+    -DCMAKE_BUILD_TYPE="%CONFIG%" -DCMAKE_INSTALL_PREFIX=../install-timemory
     -DBUILD_EXAMPLES=ON -DCTEST_SITE=AppVeyor -DCTEST_MODEL=Continuous 
     .. -G "%CMAKE_GENERATOR%" -A "%CMAKE_ARCH%"
 - set MSBuildLogger="C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
