Improved CTest/CDash (compilation, etc. in temp directory)

--- a/cmake/Templates/cdash/Init.cmake.in
+++ b/cmake/Templates/cdash/Init.cmake.in
@@ -19,6 +19,7 @@ set(CTEST_BRANCH            "@CMAKE_SOURCE_BRANCH@")
 set(CTEST_REVISION          "@CMAKE_SOURCE_REVISION@")
 set(CTEST_LOCAL_DIRECTORY   "@CMAKE_LOCAL_DIRECTORY@")
 set(CTEST_GENERATOR         "@CMAKE_GENERATOR@")
+set(CTEST_LOCAL_CHECKOUT    "@CTEST_LOCAL_CHECKOUT@")
 set(MPI_FOUND               "@MPI_FOUND@")
 if(NOT DEFINED CTEST_MODEL)
     set(CTEST_MODEL         "@CTEST_MODEL@")
@@ -114,20 +115,13 @@ set(CTEST_COMPILER_IS_CLANG     "@CMAKE_CXX_COMPILER_IS_CLANG@")
 set(CTEST_COMPILER_IS_INTEL     "@CMAKE_CXX_COMPILER_IS_INTEL@")
 
 if(NOT "${CTEST_LOCAL_DIRECTORY}" STREQUAL "")
-    set(EXCLUDE_DIRS "--exclude build-@PROJECT_NAME@"
-                     "--exclude build-timemory")
     if(WIN32)
-        find_program(COPY_CMD cp)
-        set(COPY_ARGS "-Recurse")
-        set(EXCLUDE_ARG "-Exclude")
+        find_program(COPY_CMD xcopy)
+        set(COPY_ARGS "/S /I")
     else()
         find_program(COPY_CMD rsync)
         set(COPY_ARGS "-ruv")
-        set(EXCLUDE_ARG "--exclude")
     endif()
-    foreach(_DIR ${EXCLUDE_DIRS})
-        set(COPY_ARGS "${COPY_ARGS} ${EXCLUDE_ARG} ${_DIR} ${EXCLUDE_ARG} ${CTEST_LOCAL_DIRECTORY}/${_DIR}")
-    endforeach(_DIR ${EXCLUDE_DIRS})
 
     set(CTEST_CHECKOUT_COMMAND "${COPY_CMD} ${COPY_ARGS} ${CTEST_LOCAL_DIRECTORY}/ ${CTEST_SOURCE_DIRECTORY}")
 
@@ -243,9 +237,9 @@ macro(SETUP KEY)
 
         ctest_start(${MODEL}   TRACK ${MODEL})
         # update command
-        if(NOT "${CTEST_LOCAL_DIRECTORY}" STREQUAL "")
-            ctest_update(${MODULE} TRACK ${MODEL})
-        endif(NOT "${CTEST_LOCAL_DIRECTORY}" STREQUAL "")
+        if(NOT CTEST_LOCAL_CHECKOUT)
+            ctest_update()
+        endif(NOT CTEST_LOCAL_CHECKOUT)
         configure_ctest_files()
         ## -- read CTestCustom.cmake file
         ctest_read_custom_files("${CTEST_BINARY_DIRECTORY}")
