--- a/cmake/Templates/cdash/Init.cmake.in
+++ b/cmake/Templates/cdash/Init.cmake.in
@@ -8,7 +8,7 @@ set(__cdashinit_is_loaded ON)
 include(ProcessorCount)
 ProcessorCount(CTEST_PROCESSOR_COUNT)
 
-set(CTEST_MAKE_COMMAND      "@CMAKE_MAKE_PROGRAM@")
+set(CTEST_MAKE_COMMAND      "'@CMAKE_MAKE_PROGRAM@'")
 set(CTEST_CMAKE_COMMAND     "@CMAKE_COMMAND@")
 set(CTEST_CMAKE_GENERATOR   "'@CMAKE_GENERATOR@'")
 set(CTEST_CONFIG_OPTIONS    "@CMAKE_CONFIGURE_OPTIONS@")
@@ -18,7 +18,7 @@ set(CTEST_DASHBOARD_ROOT    "@CMAKE_DASHBOARD_ROOT@")
 set(CTEST_BRANCH            "@CMAKE_SOURCE_BRANCH@")
 set(CTEST_REVISION          "@CMAKE_SOURCE_REVISION@")
 set(CTEST_LOCAL_DIRECTORY   "@CMAKE_LOCAL_DIRECTORY@")
-set(CTEST_GENERATOR         "@CMAKE_GENERATOR@")
+set(CTEST_GENERATOR         "'@CMAKE_GENERATOR@'")
 set(CTEST_LOCAL_CHECKOUT    "@CTEST_LOCAL_CHECKOUT@")
 set(MPI_FOUND               "@MPI_FOUND@")
 if(NOT DEFINED CTEST_MODEL)
@@ -116,11 +116,9 @@ set(CTEST_COMPILER_IS_INTEL     "@CMAKE_CXX_COMPILER_IS_INTEL@")
 
 if(NOT "${CTEST_LOCAL_DIRECTORY}" STREQUAL "")
     if(WIN32)
-        find_program(COPY_CMD xcopy)
-        set(COPY_ARGS "/S /I")
-        string(REPLACE "/" "\\" _LOCAL_DIRECTORY "${CTEST_LOCAL_DIRECTORY}")
-        string(REPLACE "/" "\\" _SOURCE_DIRECTORY "${CTEST_SOURCE_DIRECTORY}")
-        set(CTEST_CHECKOUT_COMMAND "${COPY_CMD} ${COPY_ARGS} ${_LOCAL_DIRECTORY} ${_SOURCE_DIRECTORY}")
+	    set(COPY_CMD ${CTEST_CMAKE_COMMAND})
+        set(COPY_ARGS "-E copy_directory")
+        set(CTEST_CHECKOUT_COMMAND "${COPY_CMD} ${COPY_ARGS} ${CTEST_LOCAL_DIRECTORY} ${CTEST_SOURCE_DIRECTORY}")
     else()
         find_program(COPY_CMD rsync)
         set(COPY_ARGS "-ruv")
@@ -136,6 +134,10 @@ else(NOT "${CTEST_LOCAL_DIRECTORY}" STREQUAL "")
 endif(NOT "${CTEST_LOCAL_DIRECTORY}" STREQUAL "")
 
 set(CTEST_CONFIGURATION_TYPE    "@CMAKE_BUILD_TYPE@")
+if(WIN32)
+    STRING(REPLACE " " "\\ " CTEST_CONFIG_OPTIONS "${CTEST_CONFIG_OPTIONS}")
+    STRING(REPLACE "\\ -D" " -D" CTEST_CONFIG_OPTIONS "${CTEST_CONFIG_OPTIONS}")
+endif(WIN32)
 set(CTEST_CONFIGURE_COMMAND     "${CTEST_CMAKE_COMMAND} ${CTEST_CONFIG_OPTIONS} -DBUILD_TESTING=ON -DDASHBOARD_MODE=ON -DCMAKE_INSTALL_PREFIX=${CTEST_INSTALL_DIRECTORY} -Wno-dev ${CTEST_SOURCE_DIRECTORY} -G ${CTEST_CMAKE_GENERATOR}")
 
 if(WIN32)
