Updates to Init.cmake.in to set arch

--- a/cmake/Templates/cdash/Init.cmake.in
+++ b/cmake/Templates/cdash/Init.cmake.in
@@ -8,21 +8,22 @@ set(__cdashinit_is_loaded ON)
 include(ProcessorCount)
 ProcessorCount(CTEST_PROCESSOR_COUNT)
 
-set(CTEST_MAKE_COMMAND      "'@CMAKE_MAKE_PROGRAM@'")
-set(CTEST_CMAKE_COMMAND     "@CMAKE_COMMAND@")
-set(CTEST_CMAKE_GENERATOR   "'@CMAKE_GENERATOR@'")
-set(CTEST_CONFIG_OPTIONS    "@CMAKE_CONFIGURE_OPTIONS@")
-set(CTEST_COMPILER          "@CMAKE_CXX_COMPILER_ID@")
-set(CTEST_COMPILER_VERSION  "@CMAKE_CXX_COMPILER_VERSION@")
-set(CTEST_DASHBOARD_ROOT    "@CMAKE_DASHBOARD_ROOT@")
-set(CTEST_BRANCH            "@CMAKE_SOURCE_BRANCH@")
-set(CTEST_REVISION          "@CMAKE_SOURCE_REVISION@")
-set(CTEST_LOCAL_DIRECTORY   "@CMAKE_LOCAL_DIRECTORY@")
-set(CTEST_GENERATOR         "'@CMAKE_GENERATOR@'")
-set(CTEST_LOCAL_CHECKOUT    "@CTEST_LOCAL_CHECKOUT@")
-set(MPI_FOUND               "@MPI_FOUND@")
+set(CTEST_MAKE_COMMAND       "'@CMAKE_MAKE_PROGRAM@'")
+set(CTEST_CMAKE_COMMAND      "@CMAKE_COMMAND@")
+set(CTEST_CMAKE_GENERATOR    "'@CMAKE_GENERATOR@'")
+set(CTEST_CONFIG_OPTIONS     "@CMAKE_CONFIGURE_OPTIONS@")
+set(CTEST_COMPILER           "@CMAKE_CXX_COMPILER_ID@")
+set(CTEST_COMPILER_VERSION   "@CMAKE_CXX_COMPILER_VERSION@")
+set(CTEST_DASHBOARD_ROOT     "@CMAKE_DASHBOARD_ROOT@")
+set(CTEST_BRANCH             "@CMAKE_SOURCE_BRANCH@")
+set(CTEST_REVISION           "@CMAKE_SOURCE_REVISION@")
+set(CTEST_LOCAL_DIRECTORY    "@CMAKE_LOCAL_DIRECTORY@")
+set(CTEST_GENERATOR          "'@CMAKE_GENERATOR@'")
+set(CTEST_LOCAL_CHECKOUT     "@CTEST_LOCAL_CHECKOUT@")
+set(CTEST_GENERATOR_PLATFORM "@CMAKE_GENERATOR_PLATFORM@")
+set(MPI_FOUND                "@MPI_FOUND@")
 if(NOT DEFINED CTEST_MODEL)
-    set(CTEST_MODEL         "@CTEST_MODEL@")
+    set(CTEST_MODEL          "@CTEST_MODEL@")
 endif(NOT DEFINED CTEST_MODEL)
 
 
@@ -138,7 +139,12 @@ if(WIN32)
     STRING(REPLACE " " "\\ " CTEST_CONFIG_OPTIONS "${CTEST_CONFIG_OPTIONS}")
     STRING(REPLACE "\\ -D" " -D" CTEST_CONFIG_OPTIONS "${CTEST_CONFIG_OPTIONS}")
 endif(WIN32)
-set(CTEST_CONFIGURE_COMMAND     "${CTEST_CMAKE_COMMAND} ${CTEST_CONFIG_OPTIONS} -DBUILD_TESTING=ON -DDASHBOARD_MODE=ON -DCMAKE_INSTALL_PREFIX=${CTEST_INSTALL_DIRECTORY} -Wno-dev ${CTEST_SOURCE_DIRECTORY} -G ${CTEST_CMAKE_GENERATOR}")
+if(NOT "${CTEST_GENERATOR_PLATFORM}" STREQUAL "")
+    set(GENERATOR_ARGS "-A ${CTEST_GENERATOR_PLATFORM}")
+else(NOT "${CTEST_GENERATOR_PLATFORM}" STREQUAL "")
+    set(GENERATOR_ARGS "")
+endif(NOT "${CTEST_GENERATOR_PLATFORM}" STREQUAL "")
+set(CTEST_CONFIGURE_COMMAND     "${CTEST_CMAKE_COMMAND} ${CTEST_CONFIG_OPTIONS} -DBUILD_TESTING=ON -DDASHBOARD_MODE=ON -DCMAKE_INSTALL_PREFIX=${CTEST_INSTALL_DIRECTORY} -Wno-dev ${CTEST_SOURCE_DIRECTORY} -G ${CTEST_CMAKE_GENERATOR} ${GENERATOR_ARGS}")
 
 if(WIN32)
     set(CTEST_BUILD_COMMAND     "${CTEST_CMAKE_COMMAND} --build ${CTEST_BINARY_DIRECTORY} --config @CMAKE_BUILD_TYPE@ --target INSTALL")
