Fixed Windows errors + add_dependencies fixes Windows builds

--- a/examples/ex2/CMakeLists.txt
+++ b/examples/ex2/CMakeLists.txt
@@ -35,6 +35,9 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TiMemory_CXX_FLAGS}")
 #
 add_executable(mpi_test_timing mpi_test_timing.cpp)
 target_link_libraries(mpi_test_timing ${TiMemory_LIBRARIES} ${EXTERNAL_LIBRARIES})
+if(NOT "${CMAKE_PROJECT_NAME}" STREQUAL "${PROJECT_SOURCE_DIR}")
+    add_dependencies(mpi_test_timing timemory-shared)
+endif(NOT "${CMAKE_PROJECT_NAME}" STREQUAL "${PROJECT_SOURCE_DIR}")
 
 if(NOT DEFINED SETUP_PY OR NOT SETUP_PY)
     install(TARGETS mpi_test_timing DESTINATION bin)
